# libpythonpro

./: .flake8  .travis.yml  README.md  github_api.py  pyproject.toml  requirements-dev.txt  requirements.txt
libpythonpro/: github_api.py
libpythonpro/spam/: db.py  enviador_de_email.py  main.py  modelos.py
libpythonpro/test_spam/: test_enviador_de_email.py  test_usuarios.py
libpythonpro/tests/: test_exemplo.py
libpythonpro/tests/test_spam/: conftest.py  test_envio_para_base_de_usuarios.py  test_usuarios.py
spam/: enviador_de_email.py
tests/test_spam/: test_enviador_de_email.py
